--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ html {
     background-color: #000;
     position: fixed;
     top: 0;
+    z-index: 1;
 }
 
 #nav {
@@ -96,9 +97,29 @@ html {
 }
 
 #slider {
-    /* min-height: 500px;
-    background-color: #333; */
+    position: relative; /* Lấy bản thân làm gốc */
     margin-top: 46px;
+    padding-top: 50%; /* Tip: tự động co dãn ảnh, kích thước chiều cao = 50% chiều rộng */
+    background: url(../img/slider/slider1.jpg) top center / cover no-repeat;
+}
+
+#slider .text-content {
+    color: #fff;
+    position: absolute; /* Phụ thuộc vào thẻ cha có thuộc tính position */
+    bottom: 47px;
+    width: 100%;
+    text-align: center;
+    /* transform: translateX(-50%); */
+}
+
+#slider .text-heading {
+    font-weight: 500;
+    font-size: 24px;
+}
+
+#slider .text-description {
+    font-size: 16px;
+    margin-top: 25px;
 }
 
 #content {
