--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,8 +123,37 @@ html {
 }
 
 #content {
-    height: 1000px;
-    background-color: #ccc;
+    /* height: 1000px;
+    background-color: #ccc; */
+}
+
+#content .content-section {
+    width: 800px;
+    padding: 64px 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#content .section-heading {
+    font-size: 30px;
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: 4px;
+}
+
+#content .section-sub-heading {
+    font-size: 15px;
+    text-align: center;
+    margin-top: 25px;
+    font-style: italic;
+    opacity: 0.6;
+}
+
+#content .about-text {
+    font-size: 15px;
+    margin-top: 25px;
+    text-align: justify;
+    line-height: 1.5;
 }
 
 #footer {
