--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Common */
 .clear {
     /* Dùng để giải quyết khi sử dụng float thẻ cha không ôm được thẻ con */
     clear: both;
@@ -18,6 +19,30 @@ html {
     color: #fff !important;
 }
 
+.text-center {
+    text-align: center !important;
+}
+
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
+}
+
+.col {
+    float: left;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.col-half {
+    width: 50%;
+}
+
+.col-third {
+    width: calc(100% / 3);
+}
+
+/* Main */
 #main {
 }
 
@@ -172,12 +197,6 @@ html {
     overflow: auto;
 }
 
-#content .member-item {
-    float: left;
-    width: calc(100% / 3);
-    text-align: center;
-}
-
 #content .member-name {
     font-size: 15px;
 }
@@ -228,14 +247,12 @@ html {
 
 /* Places */
 .places-list {
-    margin: 32px -8px 0;
-    padding-bottom: 48px;
+    margin-top: 32px;
+    margin-bottom: 48px;
 }
 
 .place-item {
-    float: left;
     width: calc(100% / 3);
-    padding: 0px 8px;
 }
 
 .place-img {
