--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,20 @@ html {
     margin-right: -8px;
 }
 
+.row::after {
+    display: block;
+    content: "";
+    clear: both;
+}
+
 .col {
     float: left;
     padding-left: 8px;
     padding-right: 8px;
+}
+
+.col-full {
+    width: 100%;
 }
 
 .col-half {
@@ -40,6 +50,14 @@ html {
 
 .col-third {
     width: calc(100% / 3);
+}
+
+.mt-8 {
+    margin-top: 8px !important;
+}
+
+.mt-16 {
+    margin-top: 16px !important;
 }
 
 /* Main */
@@ -298,6 +316,40 @@ html {
 .place-buy-btn:hover {
     color: #000;
     background-color: #ccc;
+}
+
+/* Contact form */
+.contact-content {
+    margin-top: 48px;
+}
+
+.contact-info {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.contact-info i[class*="ti-"] {
+    width: 30px;
+    display: inline-block;
+}
+
+.contact-form {
+    font-size: 15px;
+}
+
+.contact-form .form-control {
+    padding: 10px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+
+.contact-form .form-submit-btn {
+    font-size: 15px;
+    color: #fff;
+    background-color: #000;
+    border: none;
+    padding: 10px 16px;
+    float: right;
 }
 
 /* Footer section */
