add: Mobile menu responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ html {
     position: fixed;
     top: 0;
     z-index: 1;
+    overflow: hidden;
 }
 
 #nav {
@@ -153,16 +154,26 @@ html {
     font-size: 14px;
 }
 
-#header .search-button {
+#header .mobile-menu-btn,
+#header .search-btn {
     float: right;
     padding: 0 21px;
 }
 
-#header .search-button:hover {
+#header .search-btn:hover {
     cursor: pointer;
     background-color: #f44336;
 }
 
+#header .mobile-menu-btn {
+    background-color: #ccc;
+}
+
+#header .mobile-menu-btn:hover .menu-icon {
+    color: #000;
+}
+
+#header .menu-icon,
 #header .search-icon {
     color: #fff;
     font-size: 20px;
