--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,9 +1,21 @@
 @media (max-width: 740px) {
+    #nav {
+        display: block;
+    }
+
     #nav > li {
         display: block;
     }
 
-    #header .search-icon {
+    #nav > li:first-child {
+        display: inline-block;
+    }
+
+    #header .mobile-menu-btn {
+        display: block;
+    }
+
+    #header .search-btn {
         display: none;
     }
 }
