--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,7 +1,12 @@
 /* Mobile */
 @media (max-width: 740px) {
+    .s-full-width,
     .s-col-full {
-        width: 100%;
+        width: 100% !important;
+    }
+
+    .s-mt-8 {
+        margin-top: 8px !important;
     }
 
     #header {
@@ -44,5 +49,9 @@
 
     #content .member-img {
         width: 60%;
+    }
+
+    .contact-form {
+        margin-top: 16px;
     }
 }
