--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,39 @@
+/* Table & Mobile */
+@media (max-width: 1023px) {
+    .btn {
+        padding: 15px 16px;
+    }
+
+    #nav .subnav a {
+        padding: 5px 12px;
+    }
+
+    .contact-form .form-control {
+        padding: 15px;
+    }
+
+    /* .socials-list {
+        font-size: 48px;
+    } */
+
+    .contact-info {
+        line-height: 2;
+    }
+
+    #footer .socials-list a {
+        margin: 0 8px;
+    }
+
+    #footer .copyright a {
+        padding: 12px 0;
+        display: inline-block;
+    }
+}
+
+/* Table */
+@media (min-width: 740px) and (max-width: 1023px) {
+}
+
 /* Mobile */
 @media (max-width: 740px) {
     .s-full-width,
@@ -52,6 +88,6 @@
     }
 
     .contact-form {
-        margin-top: 16px;
+        margin-top: 32px;
     }
 }
