--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,11 +213,13 @@ html {
 #slider .text-heading {
     font-weight: 500;
     font-size: 24px;
+    text-shadow: 0 0 16px #000;
 }
 
 #slider .text-description {
     font-size: 16px;
     margin-top: 25px;
+    text-shadow: 0 0 1px #000;
 }
 
 /* Content section */
